[gd_scene load_steps=3 format=2]

[ext_resource path="res://classes/task/task.gd" type="Script" id=1]
[ext_resource path="res://theming/theme.tres" type="Theme" id=2]

[node name="Task" type="Panel"]
margin_right = 168.0
margin_bottom = 120.0
script = ExtResource( 1 )

[node name="ButtonArchive" type="Button" parent="."]
margin_left = 12.0
margin_top = 50.0
margin_right = 76.0
margin_bottom = 77.0
theme = ExtResource( 2 )
text = "Archive"

[node name="ButtonAdd" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -33.0
margin_right = 107.0
margin_bottom = -13.0
theme = ExtResource( 2 )
text = "Add sub-task"

[node name="Line2D" type="Line2D" parent="."]
z_index = -1
points = PoolVector2Array( 0, 0, 0, 0 )

[node name="Title" type="LineEdit" parent="."]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
theme = ExtResource( 2 )

[node name="ChildAnchor" type="Control" parent="."]
mouse_filter = 2

[connection signal="gui_input" from="." to="." method="_on_Task_gui_input"]
[connection signal="pressed" from="ButtonArchive" to="." method="_on_ButtonArchive_pressed"]
[connection signal="pressed" from="ButtonAdd" to="." method="_on_ButtonAdd_pressed"]
